# papyrus

./: ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  papyrus-1.0.pc.in  papyrus-extras-1.0.pc.in  papyrus-extras.h  papyrus-gtkmm-1.0.pc.in  papyrus-gtkmm.h  papyrus.h  papyrus.kdevelop  papyrus.spec.m4
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
demos/: Makefile.am  Makefile.in
demos/papyrus-demo/: Makefile.am  Makefile.in  demo-common.h  demos.h  demowindow.h  example_LinearGradient.cpp  example_RadialGradient.cpp  example_SVG.cpp  example_affine_controller.cpp  example_affineanimator.cpp  example_boxed.cpp  example_drawables.cpp  example_flasher.cpp  example_freehandsketcher.cpp  example_freeze_thaw.cpp  example_handlebox_scaler.cpp  example_markers.cpp  example_operators.cpp  example_scaler.cpp  example_selector.cpp  example_translator.cpp  example_viewbox.cpp  example_zoomer.cpp  textwidget.h
demos/papyrus-extras-demo/: Makefile.am  Makefile.in  demo-common.cc  demo-common.h  demos.h  demowindow.cc  example_affine_controller.cpp  example_affineanimator.cpp  example_drawables.cpp  example_freehandsketcher.cpp  example_operators.cpp  example_rotator.cpp  example_scaler.cpp  example_selector.cpp  example_viewbox.cpp  main.cc  textwidget.cc
demos/papyrus-gtkmm-demo/: Makefile.am  Makefile.in  demo-common.cc  demos.h  demowindow.cc  demowindow.h  example_animatorbouncewidget.cpp  example_animatorframeintervalwidget.cpp  example_animatorframeratewidget.cpp  example_drawabletreeview.cpp  example_lineargradient.cpp  example_linecapbuttonbox.cpp  example_linecapcombobox.cpp  example_linejoinbuttonbox.cpp  example_linejoincombobox.cpp  example_linewidthcombobox.cpp  example_markercombobox.cpp  example_markerwidget.cpp  example_pixbuf.cpp  example_scrolledviewport.cpp  example_strokewidget.cpp  example_viewport.cpp  main.cc  textwidget.cc  textwidget.h
demos/papyrus-venn-demo/: Makefile.am
doc/: Doxyfile  Makefile.am  Makefile.in  doxygen.css  doxygen_header.html  doxygen_to_devhelp.xsl.m4
doc/release-notes/: papyrus-0.12.0-release-notes.txt  papyrus-0.12.1-release-notes.txt  papyrus-0.13.0-release-notes.txt  papyrus-0.13.1-release-notes.txt
examples/: Makefile.am  Makefile.in  reference.cpp  simple.cpp
examples/button/: Makefile.am  Makefile.in  button.cpp  button.h  main.cc
examples/color_schemes/: Makefile.am  Makefile.in  color_schemes.cpp
examples/pick/: Makefile.am  Makefile.in  pick_main.cc  pick_simple.cpp  pick_simple.h
examples/shapes/: Makefile.am  Makefile.in  shapes.cpp
examples/simple_zoom/: Makefile.am  Makefile.in  simple.cpp  simple.h
examples/viewbox/: Makefile.am  Makefile.in  viewbox.cpp
papyrus/: Makefile.am  Makefile.in  affineanimator.cpp  affineanimator.h  affinecontroller.cpp  affinecontroller.h  animator.cpp  animator.h  annulus.cpp  annulus.h  arc.cpp  arc.h  beziergon.cpp  beziergon.h  bezierline.cpp  bezierline.h  boxed.cpp  boxed.h  canvas.cpp  canvas.h  circle.cpp  circle.h  color.cpp  color.h  color_scheme.cpp  color_scheme.h  color_utility.h  controller.cpp  controller.h  drawable.cpp  drawable.h  drawablecontainer.h  drawablecontroller.cpp  drawablecontroller.h  drawableset.cpp  drawableset.h  drawablesinglecontainer.cpp  drawablesinglecontainer.h  drawablewatcher.cpp  drawablewatcher.h  (+91 more)
papyrus-extras/: Makefile.am  Makefile.in  deltille.cpp  deltille.h  example_image.h  face.cpp  face.h  factory.cpp  factory.h  hextille.cpp  hextille.h  hilbert.cpp  hilbert.h  kochcurve.cpp  kochcurve.h  kochsnowflake.cpp  kochsnowflake.h  quadrille.cpp  quadrille.h  sierpinski.cpp  sierpinski.h  tiling.cpp  tiling.h
papyrus-gtkmm/: Makefile.am  Makefile.in  animatorbouncewidget.cpp  animatorbouncewidget.h  animatorframeintervalwidget.cpp  animatorframeintervalwidget.h  animatorframeratewidget.cpp  animatorframeratewidget.h  drawabletreeview.cpp  drawabletreeview.h  enums.h  gradientstopwidget.cpp  gradientstopwidget.h  linecapbuttonbox.cpp  linecapbuttonbox.h  linecapcombobox.cpp  linecapcombobox.h  linejoinbuttonbox.cpp  linejoinbuttonbox.h  linejoincombobox.cpp  linejoincombobox.h  linewidthcombobox.cpp  linewidthcombobox.h  markercombobox.cpp  markercombobox.h  markerwidget.cpp  markerwidget.h  scrolleddrawabletreeview.cpp  scrolleddrawabletreeview.h  scrolledviewport.cpp  scrolledviewport.h  strokedialog.cpp  strokedialog.h  strokewidget.cpp  strokewidget.h  utility.cpp  utility.h  viewport.cpp  viewport.h
papyrus-venn/: Makefile.am
templates/: cpp
unit-tests/: Makefile.am  Makefile.in  canvasextentstest.cpp  canvasextentstest.h  circleextentstest.cpp  circleextentstest.h  drawablematrixtests.cpp  drawablematrixtests.h  groupextentstest.cpp  groupextentstest.h  helper.cpp  helper.h  matrixparsertest.cpp  matrixparsertest.h  papyrus_unit_tests.cpp  rectangleextentstest.cpp  rectangleextentstest.h  svgparsertest.cpp  svgparsertest.h
